--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
 PORT = 4040
-MONGO_URI =mongodb+srv://ansariamaan854:Amaan123@cluster0.otm7zmp.mongodb.net/fullStackTask
+MONGO_URI =mongodb+srv://username:password@cluster0.otm7zmp.mongodb.net/dbName
 
